--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,17 +4,15 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login --region ap-northeast-1 --no-include-email)
+      - docker login aihara.jfrog.io -u ${JFROG_USER_NAME} -p ${JFROG_PASS}
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - echo ${AWS_ACCOUNT_ID}
-      - docker build -t ${IMAGE_REPO_NAME} .
       - IMAGE_TAG=$(git rev-parse --short HEAD)
-      - docker tag ${IMAGE_REPO_NAME}:latest ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}:${IMAGE_TAG}
+      - docker tag ${IMAGE_REPO_NAME}:latest aihara.jfrog.io/aihara-test-ocker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}:${IMAGE_TAG}
+      - docker push aihara.jfrog.io/aihara-test-docker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
