--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
+      - docker build -t ${IMAGE_REPO_NAME} .
       - IMAGE_TAG=$(git rev-parse --short HEAD)
       - docker tag ${IMAGE_REPO_NAME}:latest aihara.jfrog.io/aihara-test-ocker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
   post_build:
