--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,16 +4,17 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - docker login aihara.jfrog.io -u ${JFROG_USER_NAME} -p ${JFROG_PASS}
+      - docker login cicdjenkinshiguchiteam.jfrog.io -u ${JFROG_USER_NAME} -p ${JFROG_PASS}
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t ${IMAGE_REPO_NAME} .
       - IMAGE_TAG=$(git rev-parse --short HEAD)
-      - docker tag ${IMAGE_REPO_NAME}:latest aihara.jfrog.io/aihara-test-docker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
+      - docker tag ${IMAGE_REPO_NAME}:latest cicdjenkinshiguchiteam.jfrog.io/artifactory/higuchiteam-docker-docker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
+      
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push aihara.jfrog.io/aihara-test-docker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
+      - docker push cicdjenkinshiguchiteam.jfrog.io/artifactory/higuchiteam-docker-docker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
