--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,11 +11,11 @@ phases:
       - echo Building the Docker image...
       - docker build -t ${IMAGE_REPO_NAME} .
       - IMAGE_TAG=$(git rev-parse --short HEAD)
-      - docker tag ${IMAGE_REPO_NAME}:latest cicdjenkinshiguchiteam.jfrog.io/artifactory/higuchiteam-docker-docker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
+      - docker tag ${IMAGE_REPO_NAME}:latest jenkins.jfrog.io/artifactory/higuchiteam-docker-docker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
       
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push cicdjenkinshiguchiteam.jfrog.io/artifactory/higuchiteam-docker-docker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
+      - docker push jenkins.jfrog.io/artifactory/higuchiteam-docker-docker/${DOCKER_REPOSITORY}:${IMAGE_TAG}
       
